--- a/estilos.css
+++ b/estilos.css
@@ -35,5 +35,10 @@ footer{
     margin-bottom: 1cm;
 
 }
+#p1{
+    font-size: x-large;
+    text-align: left;
+    margin-top: 10px;
+    color:black;
 
-
+}
