--- a/estilos.css
+++ b/estilos.css
@@ -42,3 +42,39 @@ footer{
     color:black;
 
 }
+#carousel{
+    box-shadow: 10px 10px 25px black;
+    border-radius: 5px;
+    margin-bottom: 1cm;
+   
+}
+
+
+
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+  }
+  
+  /* Add a hover effect if you want */
+  .fa:hover {
+    opacity: 0.7;
+  }
+  
+  /* Set a specific color for each brand */
+  
+  /* Facebook */
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+  
+  /* Twitter */
+  .fa-twitter {
+    background: #55ACEE;
+    color: white;
+  }
